@@ -27,6 +27,12 @@ software-store (0.3.4) UNRELEASED; urgency=low
     - fix crash when no pane is active (LP: #430912)
   * utils/update-software-store:
     - fix crash when setlocale() fails (LP: #431099)
+  * softwarestore/view/appdetailsview.py:
+    - shwo proper error message (LP: #431100)
+  * softwarestore/view/dialogs.py:
+    - improve dialog handling by adding optional details
+  * po/POTFILES.in:
+    - updated
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Sep 2009 12:28:13 +0200
 
